decouple related anime and recommendations into dedicated endpoints
